# openpam

./: CHECKLIST  CREDITS  HISTORY  INSTALL  LICENSE  MANIFEST  Makefile.am  README  RELNOTES  TODO  autogen.des  autogen.sh  clean.sh  configure.ac  configure.in  dist.sh  mkpkgng.in  pamgdb.in
doc/: Makefile.am  xsso_errata.txt
doc/man/: Makefile  Makefile.am  oath.man  openpam_borrow_cred.3  openpam_free_data.3  openpam_get_option.3  openpam_log.3  openpam_restore_cred.3  pam.3  pam.conf.5  pam.man  pam_acct_mgmt.3  pam_authenticate.3  pam_chauthtok.3  pam_close_session.3  pam_conv.3  pam_end.3  pam_error.3  pam_get_authtok.3  pam_get_data.3  pam_get_item.3  pam_get_user.3  pam_getenv.3  pam_getenvlist.3  pam_info.3  pam_open_session.3  pam_prompt.3  pam_putenv.3  pam_set_data.3  pam_set_item.3  pam_setcred.3  pam_setenv.3  pam_sm_authenticate.3  pam_sm_chauthtok.3  pam_sm_close_session.3  pam_sm_open_session.3  pam_sm_setcred.3  pam_start.3  pam_verror.3  pam_vinfo.3  (+1 more)
include/security/: Makefile.am  oath.h  oath_constants.h  oath_rfc3986.h  oath_rfc4648.h  oath_types.h  openpam.h  openpam_version.h  pam_appl.h  pam_constants.h  pam_modules.h  pam_types.h
lib/: Makefile  Makefile.am  openpam_asprintf.h  openpam_borrow_cred.c  openpam_check_owner_perms.c  openpam_configure.c  openpam_constants.c  openpam_constants.h  openpam_cred.h  openpam_ctype.h  openpam_debug.h  openpam_dispatch.c  openpam_dynamic.c  openpam_features.c  openpam_features.h  openpam_findenv.c  openpam_free_data.c  openpam_free_envlist.c  openpam_get_feature.c  openpam_get_option.c  openpam_impl.h  openpam_load.c  openpam_log.c  openpam_nullconv.c  openpam_readline.c  openpam_readlinev.c  openpam_readword.c  openpam_restore_cred.c  openpam_set_feature.c  openpam_set_option.c  openpam_static.c  openpam_straddch.c  openpam_strlcat.c  openpam_strlcat.h  openpam_strlcmp.h  openpam_strlcpy.c  openpam_subst.c  openpam_ttyconv.c  openpam_vasprintf.c  pam_acct_mgmt.c  (+40 more)
lib/liboath/: Makefile.am  oath_base32.c  oath_base64.c  oath_hotp.c  oath_impl.h  oath_key.c  oath_key_alloc.c  oath_key_create.c  oath_key_dummy.c  oath_key_free.c  oath_key_from_uri.c  oath_mode.c  oath_totp.c  oath_uri_decode.c
lib/libpam/: Makefile.am  openpam_asprintf.c  openpam_asprintf.h  openpam_borrow_cred.c  openpam_check_owner_perms.c  openpam_configure.c  openpam_constants.c  openpam_constants.h  openpam_ctype.h  openpam_debug.h  openpam_dispatch.c  openpam_dlfunc.h  openpam_dynamic.c  openpam_features.h  openpam_findenv.c  openpam_free_data.c  openpam_free_envlist.c  openpam_get_feature.c  openpam_get_option.c  openpam_impl.h  openpam_load.c  openpam_log.c  openpam_nullconv.c  openpam_readline.c  openpam_readlinev.c  openpam_readword.c  openpam_restore_cred.c  openpam_set_feature.c  openpam_set_option.c  openpam_static.c  openpam_strlcat.h  openpam_strlcpy.c  openpam_strlcpy.h  openpam_strlset.c  openpam_strlset.h  openpam_subst.c  openpam_ttyconv.c  openpam_vasprintf.c  openpam_vasprintf.h  pam_authenticate.c  (+31 more)
misc/: bumpdates.sh  gendoc.pl  history2wiki.pl  relname.pl
modules/: Makefile  Makefile.am
modules/pam_deny/: Makefile.am  pam_deny.c
modules/pam_dummy/: pam_dummy.c
modules/pam_oath/: Makefile.am  oath.h  oath_base32.c  oath_base64.c  oath_key.c  oath_totp.c  pam_oath.8  pam_oath.c
modules/pam_permit/: Makefile.am  pam_permit.c
modules/pam_return/: pam_return.c
modules/pam_unix/: Makefile  Makefile.am  pam_unix.c
t/: Makefile.am  t.h  t_file.c  t_main.c  t_openpam_ctype.c  t_openpam_dispatch.c  t_openpam_readlinev.c  t_openpam_readword.c  t_pam_conv.c  t_pam_env.c  t_rfc3986.c  t_rfc4648.c
trunk/: CHECKLIST  CREDITS  HISTORY  INSTALL  LICENSE  MANIFEST  Makefile  Makefile.am  Makefile.inc  README  RELNOTES  TODO  autogen.des  autogen.sh  clean.sh  configure.ac  configure.in  dist.sh  mkpkgng.in
trunk/doc/: Makefile  Makefile.am  xsso_errata.txt
trunk/doc/man/: Makefile  Makefile.am  openpam.man  openpam_get_option.3  openpam_log.3  openpam_nullconv.3  openpam_set_option.3  openpam_ttyconv.3  pam.3  pam.conf.5  pam.man  pam_acct_mgmt.3  pam_authenticate.3  pam_chauthtok.3  pam_close_session.3  pam_conv.3  pam_end.3  pam_error.3  pam_get_authtok.3  pam_get_data.3  pam_get_item.3  pam_get_user.3  pam_getenv.3  pam_getenvlist.3  pam_info.3  pam_open_session.3  pam_prompt.3  pam_putenv.3  pam_set_data.3  pam_set_item.3  pam_setcred.3  pam_setenv.3  pam_sm_acct_mgmt.3  pam_sm_authenticate.3  pam_sm_chauthtok.3  pam_sm_close_session.3  pam_sm_setcred.3  pam_start.3  pam_strerror.3  pam_verror.3  (+2 more)
trunk/include/: Makefile.am
trunk/lib/: Makefile  Makefile.am  openpam.h  openpam_asprintf.c  openpam_borrow_cred.c  openpam_check_owner_perms.c  openpam_configure.c  openpam_constants.h  openpam_ctype.h  openpam_debug.h  openpam_dispatch.c  openpam_dynamic.c  openpam_findenv.c  openpam_free_data.c  openpam_free_envlist.c  openpam_get_feature.c  openpam_get_option.c  openpam_impl.h  openpam_load.c  openpam_log.c  openpam_nullconv.c  openpam_readline.c  openpam_readlinev.c  openpam_readword.c  openpam_restore_cred.c  openpam_set_option.c  openpam_static.c  openpam_straddch.c  openpam_strlcat.h  openpam_strlcpy.c  openpam_strlcpy.h  openpam_subst.c  openpam_ttyconv.c  openpam_vasprintf.c  openpam_vasprintf.h  pam_acct_mgmt.c  pam_authenticate.c  pam_authenticate_secondary.c  pam_chauthtok.c  (+37 more)
trunk/lib/liboath/: Makefile.am  oath_base32.c  oath_base64.c  oath_hotp.c  oath_impl.h  oath_key.c  oath_key_alloc.c  oath_key_create.c  oath_key_dummy.c  oath_key_free.c  oath_key_from_file.c  oath_key_from_uri.c  oath_totp.c  oath_uri_decode.c
trunk/modules/pam_deny/: Makefile.am  pam_deny.c
trunk/modules/pam_oath/: Makefile.am  oath.h  oath_base32.c  oath_hotp.c  oath_key.c  oath_totp.c  pam_oath.c
trunk/modules/pam_permit/: Makefile.am  pam_permit.c
trunk/modules/pam_unix/: Makefile.am  pam_unix.c
trunk/t/: Makefile.am  t.h  t_file.c  t_main.c  t_openpam_ctype.c  t_openpam_dispatch.c  t_openpam_readlinev.c  t_openpam_readword.c  t_pam_conv.c  t_pam_conv.h  t_pam_env.c  t_pam_err.c  t_pam_err.h  t_rfc3986.c  t_rfc4648.c
(+79 files in other folders)
